# DenseSurfelMapping

./: .gitignore  README.md
ORB_SLAM2/: CMakeLists.txt  FrameTrajectory_KITTI_Format.txt  FrameTrajectory_TUM_Format.txt  KeyFrameTrajectory_TUM_Format.txt  orb_kitti_launch.sh  orb_kitti_rgbd-00-02-launch.sh  orb_launch.sh
ORB_SLAM2/Examples/RGB-D/: TUM.yaml  TUM1.yaml  icl_nium.yaml
ORB_SLAM2/Examples/ROS/ORB_SLAM2/: CMakeLists.txt
ORB_SLAM2/Examples/ROS/ORB_SLAM2/src/: ros_rgbd.cc  ros_stereo.cc
ORB_SLAM2/Examples/Stereo/: KITTI04-12.yaml
ORB_SLAM2/Examples/kitti_rgbd/: kitti00-02.yaml
ORB_SLAM2/include/: MapDrawer.h  System.h  Tracking.h
ORB_SLAM2/src/: KeyFrame.cc  LocalMapping.cc  MapDrawer.cc  System.cc  Tracking.cc  Viewer.cc
cerebro/: CMakeLists.txt  package.xml
cerebro/msg/: LoopEdge.msg
kitti_publisher/: CMakeLists.txt  package.xml
kitti_publisher/scripts/: publisher.py
surfel_fusion/: CMakeLists.txt  package.xml  rviz_config.rviz
surfel_fusion/launch/: fuse_depthnet.launch  kitti_orb.launch  pj.launch  surfel.rviz  vins_realsense.launch
surfel_fusion/src/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  cuda_exception.cuh  cuda_functions.cu  cuda_functions.cuh  device_image.cuh  device_image_backup.cuh  device_linear.cuh  elements.h  fusion_functions.cpp  fusion_functions.h  helper_math.h  matrix.cuh  ros_node.cpp  se3.cuh  slic.cpp  slic.h  surfel_map (copy).cu  surfel_map.cpp  surfel_map.h
surfel_fusion/src/opengl_render/: index_render.frag  index_render.geom  index_render.vert  render_tool.cpp  render_tool.h  shader.cpp  shader.h
